Add "invalid_credentials" message to multiple language files
- Updated Spanish (es.json) to include "invalid_credentials": "Credenciales no válidas"
- Updated French (fr.json) to include "invalid_credentials": "Des références non valides"
- Updated Italian (it.json) to include "invalid_credentials": "Credenziali non valide"
- Updated Korean (ko.json) to include "invalid_credentials": "잘못된 자격 증명"
- Updated Dutch (nl.json) to include "invalid_credentials": "Ongeldige referenties"
- Updated Norwegian (no.json) to include "invalid_credentials": "Ugyldig legitimasjon"
- Updated Russian (ru.json) to include "invalid_credentials": "Неверные полномочия"
- Updated Swedish (sv.json) to include "invalid_credentials": "Ogiltiga referenser"
- Updated Chinese (zh.json) to include "invalid_credentials": "无效的凭据"

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -477,7 +477,8 @@
     "social_auth_setup": "Social Authentication Setup",
     "staff_status": "Personalstatus",
     "staff_user": "Personalbenutzer",
-    "profile_info_desc": "Aktualisieren Sie Ihre persönlichen Daten und Ihr Profilbild"
+    "profile_info_desc": "Aktualisieren Sie Ihre persönlichen Daten und Ihr Profilbild",
+    "invalid_credentials": "Ungültige Anmeldeinformationen"
   },
   "checklist": {
     "checklist_delete_error": "Fehler beim Löschen der Checkliste",
