--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -170,16 +170,23 @@
 		"private": "Private",
 		"public": "Public",
 		"archived": "Archived",
+		"name_location": "name, location",
+		"loading_adventures": "Loading adventures...",
+		"all_adventures_already_linked": "All adventures are already linked to this collection.",
 		"edit_collection": "Edit Collection",
 		"unarchive": "Unarchive",
 		"archive": "Archive",
 		"no_collections_found": "No collections found to add this adventure to.",
+		"create_collection_first": "Create a collection first to organize your adventures and memories.",
+		"done": "Done",
+		"adventures_available": "Adventures Available",
+		"collections_linked": "Collections Linked",
 		"not_visited": "Not Visited",
 		"archived_collection_message": "Collection archived successfully!",
 		"unarchived_collection_message": "Collection unarchived successfully!",
 		"delete_collection_success": "Collection deleted successfully!",
-		"delete_collection_warning": "Are you sure you want to delete this collection? This will also delete all of the linked adventures. This action cannot be undone.",
 		"cancel": "Cancel",
+		"delete_collection_warning": "Are you sure you want to delete this collection? This action cannot be undone.",
 		"delete_collection": "Delete Collection",
 		"delete_adventure": "Delete Adventure",
 		"adventure_delete_success": "Adventure deleted successfully!",
@@ -495,7 +502,10 @@
 		"no_archived_collections": "No archived collections.",
 		"create_first": "Create your first collection to organize your adventures and memories.",
 		"make_sure_public": "Make sure your profile is public so others can share with you.",
-		"archived_appear_here": "Archived collections will appear here."
+		"archived_appear_here": "Archived collections will appear here.",
+		"linked": "Linked",
+		"available": "Available",
+		"try_different_search": "Try a different search or filter."
 	},
 	"notes": {
 		"note_deleted": "Note deleted successfully!",
