--- a/frontend/src/locales/no.json
+++ b/frontend/src/locales/no.json
@@ -162,7 +162,6 @@
     "archived_collection_message": "Samlingen ble arkivert!",
     "unarchived_collection_message": "Samlingen ble fjernet fra arkivet!",
     "delete_collection_success": "Samlingen ble slettet!",
-    "delete_collection_warning": "Er du sikker på at du vil slette denne samlingen? Dette vil også slette alle lenkede eventyr. Denne handlingen kan ikke angres.",
     "cancel": "Avbryt",
     "delete_collection": "Slett samling",
     "delete_adventure": "Slett eventyr",
@@ -288,7 +287,15 @@
     "filters_and_sort": "Filtre",
     "filters_and_stats": "Filtre",
     "no_adventures_message": "Begynn å dokumentere eventyrene dine og planlegge nye. \nHver reise har en historie som er verdt å fortelle.",
-    "travel_progress": "Reisefremgang"
+    "travel_progress": "Reisefremgang",
+    "adventures_available": "Eventyr tilgjengelig",
+    "all_adventures_already_linked": "Alle eventyr er allerede knyttet til denne samlingen.",
+    "collections_linked": "Samlinger koblet",
+    "create_collection_first": "Lag en samling først for å organisere dine eventyr og minner.",
+    "delete_collection_warning": "Er du sikker på at du vil slette denne samlingen? \nDenne handlingen kan ikke angres.",
+    "done": "Ferdig",
+    "loading_adventures": "Laster opp eventyr ...",
+    "name_location": "Navn, plassering"
   },
   "worldtravel": {
     "country_list": "Liste over land",
@@ -495,7 +502,10 @@
     "no_archived_collections": "Ingen arkiverte samlinger.",
     "no_collections_yet": "Ingen samlinger ennå",
     "no_shared_collections": "Ingen delte samlinger.",
-    "shared_collections": "Delte samlinger"
+    "shared_collections": "Delte samlinger",
+    "available": "Tilgjengelig",
+    "linked": "Koblet",
+    "try_different_search": "Prøv et annet søk eller filter."
   },
   "notes": {
     "note_deleted": "Notat slettet!",
