--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -243,7 +243,8 @@
     "delete_collection_warning": "Weet u zeker dat u deze collectie wilt verwijderen? \nDeze actie kan niet ongedaan worden gemaakt.",
     "done": "Klaar",
     "loading_adventures": "Adventuren laden ...",
-    "name_location": "naam, locatie"
+    "name_location": "naam, locatie",
+    "collection_contents": "Verzamelingsinhoud"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -371,7 +372,12 @@
     "show_map_labels": "Toon kaartlabels",
     "total_cities": "Totale steden",
     "total_countries": "Totale landen",
-    "total_regions": "Totaal aantal regio's"
+    "total_regions": "Totaal aantal regio's",
+    "newest_first": "Nieuwste eerste",
+    "oldest_first": "Oudste eerste",
+    "unvisited_first": "Eerst niet bezocht",
+    "visited_first": "Eerst bezocht",
+    "total_items": "Totale items"
   },
   "settings": {
     "account_settings": "Gebruikersaccount instellingen",
