--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -295,7 +295,8 @@
     "delete_collection_warning": "您确定要删除此系列吗？\n该动作不能撤消。",
     "done": "完毕",
     "loading_adventures": "加载冒险...",
-    "name_location": "名称，位置"
+    "name_location": "名称，位置",
+    "collection_contents": "收集内容"
   },
   "auth": {
     "forgot_password": "忘记密码？",
@@ -368,7 +369,12 @@
     "show_map": "显示地图",
     "show_map_labels": "显示地图标签",
     "total_cities": "总城市",
-    "total_countries": "总国家"
+    "total_countries": "总国家",
+    "newest_first": "最新的第一",
+    "oldest_first": "最古老的第一",
+    "unvisited_first": "首先未访问",
+    "visited_first": "首先访问",
+    "total_items": "总项目"
   },
   "users": {
     "no_users_found": "未找到已公开个人资料的用户。"
