--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -243,7 +243,8 @@
     "delete_collection_warning": "Är du säker på att du vill ta bort den här samlingen? \nDenna åtgärd kan inte ångras.",
     "done": "Gjort",
     "loading_adventures": "Laddar äventyr ...",
-    "name_location": "namn, plats"
+    "name_location": "namn, plats",
+    "collection_contents": "Insamlingsinnehåll"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -346,7 +347,12 @@
     "show_map_labels": "Visa kartetiketter",
     "total_cities": "Totala städer",
     "total_countries": "Totala länder",
-    "total_regions": "Totala regioner"
+    "total_regions": "Totala regioner",
+    "newest_first": "Nyaste första",
+    "oldest_first": "Äldsta först",
+    "unvisited_first": "Oöverträffad först",
+    "visited_first": "Besökt först",
+    "total_items": "Totala artiklar"
   },
   "auth": {
     "confirm_password": "Bekräfta lösenord",
